--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@tailwindcss/typography": "^0.5.19",
     "better-sqlite3": "^12.4.1",
     "nuxt": "^3.13.0",
+    "three": "^0.180.0",
+    "three-stdlib": "^2.36.0",
     "vue": "^3.4.0",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.18.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@types/three": "^0.180.0",
     "@vueuse/core": "^11.0.0",
     "@vueuse/nuxt": "^11.0.0"
   }
